--- a/assets/css/spacing.css
+++ b/assets/css/spacing.css
@@ -1,10 +1,11 @@
 /* Padding */
 .px-5 {
-  padding-inline: 5px;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
-.pt-3 {
-  padding-top: 3px;
+.pt-02 {
+  padding-top: 0.2rem;
 }
 
 .pr-1 {
@@ -17,16 +18,13 @@
 
 
 /* Margin */
-.mt--1 {
-  margin-top: -1px;
-}
 
 .mr-1 {
   margin-right: 1rem;
 }
 
 .m-2 {
-  margin: 2
+  margin: 1rem;
 }
 
 /* Line height */
