--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,36 @@ body {
   }
 }
 
+.first-circle {
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+  border: 2px solid var(--light-blue);
+  position: absolute;
+  top: -50px;
+  right: -50px;
+}
+
+.middle-circle {
+  width: 150px;
+  height: 150px;
+  border-radius: 75px;
+  border: 2px solid var(--light-blue);
+  position: absolute;
+  top: -75px;
+  right: -75px;
+}
+
+.outer-circle {
+  width: 200px;
+  height: 200px;
+  border-radius: 100px;
+  border: 2px solid var(--light-blue);
+  position: absolute;
+  top: -100px;
+  right: -100px;
+}
+
 a,
 a:hover,
 a:visited {
